fixed word wrap on user settings screen

--- a/server/app/styles/drone.less
+++ b/server/app/styles/drone.less
@@ -1039,6 +1039,7 @@ nav {
 				color:#666;
 				line-height:22px;
 				font-size:14px;
+				word-break: break-all;
 			}
 		}
 
